item front-end connected with back-end via AJAX

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <form action="" class="inputData" id="ItemForm">
                     <div>
                         <label for="">Item Code</label>
-                        <input type="text" class="itemId" readonly>
+                        <input type="text" class="itemId">
                         <h5 class="invalidCode"></h5>
                     </div>
                     <div>
@@ -196,25 +196,13 @@
                 <table>
                     <thead>
                         <tr>
-                            <th>Item Code</th>
+                            <th>Item Id</th>
                             <th>Item Name</th>
                             <th>Item Qty</th>
                             <th>Item Price</th>
                         </tr>
                     </thead>
                     <tbody class="tableRow">
-                        <tr>
-                            <td>IT-001</td>
-                            <td>Soap</td>
-                            <td>100</td>
-                            <td>50.00</td>
-                        </tr>
-                        <tr>
-                            <td>IT-002</td>
-                            <td>Shampoo</td>
-                            <td>200</td>
-                            <td>100.00</td>
-                        </tr>
                     </tbody>
                 </table>
             </div>
