order front-end connected with back-end via AJAX

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                         <div>
                             <div>
                                 <label for="">Order Id</label>
-                                <input type="text" class="orderId" readonly>
+                                <input type="text" class="orderId">
                             </div>
                             <div>
                                 <label for="">Order Date</label>
